// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling
    $2.34
  </p>
</div>
`;

exports[`should correctly render ExpenseSummary with multiple expense 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     totalling
    $235,243,215.23
  </p>
</div>
`;
